Prototype for system defined properties.